# g

./: Cargo.toml  README.md  build.rs  ratatui.md
.github/workflows/: check.yml  docs.yml
completions/: _g  g.bash  g.elv  g.fish
docs/: README.md  astro.config.mjs  package-lock.json  package.json
docs/src/components/: AppHeader.astro
docs/src/components/react/: InlineFlowDiagrams.tsx  TerminalDemo.tsx
docs/src/content/docs/: cli-reference.md  configuration.md  git-flows.mdx  installation.md  introduction.md  log-and-diff.md  stacks.md  stacks.mdx  stats.md  theming.md  use-cases.md  workspaces.md  workspaces.mdx
docs/src/layouts/: DocsLayout.astro  Layout.astro
docs/src/pages/: index.astro
docs/src/pages/docs/: [...slug].astro  index.astro
docs/src/styles/: flow-diagrams.css  global.css
man/: g-add.1  g-commit.1  g-completions.1  g-config.1  g-developer.1  g-log.1  g-show.1  g-stack-down.1  g-stack-pr.1  g-stack-remove.1  g-stack-squash.1  g-stack-switch.1  g-stack-up.1  g-stack-view.1  g-stage.1  g-stats.1  g-workspace-delete.1  g-workspace-list.1  g-workspace.1
man/man1/: g-branch-squash.1  g-branch.1  g-compare.1  g-config-set.1  g-config.1  g-developer-db.1  g-developer-repos.1  g-diff.1  g-stack-absorb.1  g-stack-add.1  g-stack-delete.1  g-stack-details.1  g-stack-fold.1  g-stack-list.1  g-stack-new.1  g-stack-push.1  g-stack-sync.1  g-stack.1  g-stats.1  g-status.1  g-workspace-create.1  g-workspace-init.1  g-workspace-list.1  g-workspace-rename.1  g-workspace-status.1  g-workspace-switch.1  g.1
src/: cli.rs  main.rs
src/cli/: branch.rs  commit.rs  compare.rs  config.rs  developer.rs  mod.rs  stack.rs  stats.rs  styles.rs  workspace.rs
src/commands/: commit.rs  compare.rs  ctx.rs  developer.rs  error.rs  git.rs  mod.rs  prelude.rs  stack.rs  stage.rs  stats.rs  test_support.rs  workspace.rs
src/commands/commit/: builder.rs  dry_run.rs  mod.rs  parse.rs  preview.rs
src/commands/git/: add.rs  branch.rs  diff.rs  dry_run.rs  exec.rs  log.rs  mod.rs  repo.rs  show.rs  status.rs
src/commands/stack/: absorb.rs  add.rs  delete.rs  details.rs  fold.rs  list.rs  mod.rs  new.rs  pr.rs  push.rs  remove.rs  reorder.rs  shared.rs  squash.rs  switch.rs  sync.rs
src/commands/stats/: active_hours.rs  commit_types.rs  duplicates.rs  heatmap.rs  import.rs  lines_chart.rs  messages.rs  mod.rs  overview.rs  repo_activity.rs  search.rs  shared.rs  top_commands.rs
src/commands/workspace/: clone.rs  create.rs  delete.rs  init.rs  list.rs  mod.rs  rename.rs  shared.rs  status.rs  switch.rs
src/config/: default_config.toml  mod.rs  settings.rs
src/github/: mod.rs
src/storage/: db.rs  migrations.rs  mod.rs  repos.rs  stacks.rs  stats.rs  toml_import.rs  workspaces.rs
src/storage/sql/: 001_initial.sql  002_commit_messages.sql
src/storage/stats/: events.rs  messages.rs  mod.rs  queries.rs
src/ui/: inline.rs  interactive.rs  mod.rs  print.rs  render.rs  stage.rs  theme.rs  widgets.rs
src/ui/inline/: mod.rs  runtime.rs  widgets.rs
src/ui/interactive/: layout.rs  mod.rs  runtime.rs  widgets.rs
src/ui/theme/: borders.rs  file.rs  icons.rs  mod.rs  palette.rs  spacing.rs  styles.rs
themes/: dark.toml  dracula.toml  gruvbox.toml  light.toml  monochrome.toml  nord.toml  solarized-dark.toml
