[package]
name = "vcli"
version = "0.1.0"
edition = "2021"
authors = ["vcli contributors"]
description = "A beautiful, feature-rich Git CLI with stacked PRs, workspace management, and enhanced UX"
repository = ""
license = "MIT"

[[bin]]
name = "vcli"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "color", "wrap_help"] }

# Colors and terminal
colored = "2"
indicatif = "0.17"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
crossterm = "0.27"
console = "0.15"

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
which = "6"
regex = "1"

# HTTP (for GitHub API)
ureq = { version = "2", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
