[package]
name = "g"
version = "0.1.0"
edition = "2021"
authors = ["Bozhidar Dryanovski"]
description = "A beautiful, feature-rich Git CLI with stacked PRs, workspace management, and enhanced UX"
repository = ""
license = "MIT"
# Docs site (Astro) lives in docs/ and must not ship with the crate.
exclude = ["docs"]

[[bin]]
name = "g"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "color", "wrap_help"] }

# Colors and terminal
colored = "2"
indicatif = "0.17"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
crossterm = "0.27"
console = "0.15"

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
which = "6"
regex = "1"

# HTTP (for GitHub API)
ureq = { version = "2", features = ["json"] }

# Embedded database
rusqlite = { version = "0.31", features = ["bundled"] }

[profile.release]
opt-level = 3
# "fat" LTO merges all crate codegen units into a single module so the
# compiler can inline and eliminate dead code across crate boundaries.
lto = "fat"
codegen-units = 1
# Abort on panic removes the unwinding machinery from the binary, shrinking
# it and making panics immediately terminate (no stack-unwinding overhead).
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
# Keep debug symbols in benchmark builds so profilers can show function names.
debug = true
strip = false

[profile.dev]
opt-level = 0
debug = true

# Compile dependencies at opt-level 3 even in dev builds so the terminal UI
# (indicatif, crossterm, colored) renders at full speed during development.
[profile.dev.package."*"]
opt-level = 3
